src/objects/EFStyle__c.object
<CustomObject>
    <fields>
        <fullName>AlignmentHorizontal__c</fullName>
        <label>Alignment Horizontal</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>left</fullName>
                    <default>true</default>
                    <label>left</label>
                </value>
                <value>
                    <fullName>center</fullName>
                </value>
                <value>
                    <fullName>right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AlignmentVertical__c</fullName>
        <label>Alignment Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>bottom</fullName>
                    <default>true</default>
                    <label>bottom</label>
                </value>
                <value>
                    <fullName>middle</fullName>
                </value>
                <value>
                    <fullName>top</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BorderBottom__c</fullName>
        <label>Border Bottom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>thin</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashDot</fullName>
                </value>
                <value>
                    <fullName>hair</fullName>
                </value>
                <value>
                    <fullName>dashDotDot</fullName>
                </value>
                <value>
                    <fullName>slantDashDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashed</fullName>
                </value>
                <value>
                    <fullName>mediumDashDotDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashDot</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BorderColor__c</fullName>
        <label>Border Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BorderLeft__c</fullName>
        <label>Border Left</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>thin</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashDot</fullName>
                </value>
                <value>
                    <fullName>hair</fullName>
                </value>
                <value>
                    <fullName>dashDotDot</fullName>
                </value>
                <value>
                    <fullName>slantDashDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashed</fullName>
                </value>
                <value>
                    <fullName>mediumDashDotDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashDot</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BorderRight__c</fullName>
        <label>Border Right</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>thin</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashDot</fullName>
                </value>
                <value>
                    <fullName>hair</fullName>
                </value>
                <value>
                    <fullName>dashDotDot</fullName>
                </value>
                <value>
                    <fullName>slantDashDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashed</fullName>
                </value>
                <value>
                    <fullName>mediumDashDotDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashDot</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BorderTop__c</fullName>
        <label>Border Top</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>thin</fullName>
                </value>
                <value>
                    <fullName>dotted</fullName>
                </value>
                <value>
                    <fullName>dashDot</fullName>
                </value>
                <value>
                    <fullName>hair</fullName>
                </value>
                <value>
                    <fullName>dashDotDot</fullName>
                </value>
                <value>
                    <fullName>slantDashDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashed</fullName>
                </value>
                <value>
                    <fullName>mediumDashDotDot</fullName>
                </value>
                <value>
                    <fullName>mediumDashDot</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>double</fullName>
                </value>
                <value>
                    <fullName>thick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FillColor__c</fullName>
        <label>FillColor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FillPatern__c</fullName>
        <label>Fill Patern</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                    <default>true</default>
                    <label>none</label>
                </value>
                <value>
                    <fullName>solid</fullName>
                </value>
                <value>
                    <fullName>darkGray</fullName>
                </value>
                <value>
                    <fullName>mediumGray</fullName>
                </value>
                <value>
                    <fullName>lightGray</fullName>
                </value>
                <value>
                    <fullName>gray125</fullName>
                </value>
                <value>
                    <fullName>gray0625</fullName>
                </value>
                <value>
                    <fullName>darkHorizontal</fullName>
                </value>
                <value>
                    <fullName>darkVertical</fullName>
                </value>
                <value>
                    <fullName>darkDown</fullName>
                </value>
                <value>
                    <fullName>darkUp</fullName>
                </value>
                <value>
                    <fullName>darkGrid</fullName>
                </value>
                <value>
                    <fullName>darkTrellis</fullName>
                </value>
                <value>
                    <fullName>lightHorizontal</fullName>
                </value>
                <value>
                    <fullName>lightVertical</fullName>
                </value>
                <value>
                    <fullName>lightDown</fullName>
                </value>
                <value>
                    <fullName>lightUp</fullName>
                </value>
                <value>
                    <fullName>lightGrid</fullName>
                </value>
                <value>
                    <fullName>lightTrellis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FontBold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Font Bold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontColor__c</fullName>
        <label>Font Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontItalic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Font Italic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontSize__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Font Size</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontUnderline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Font Underline</label>
        <type>Checkbox</type>
    </fields>
    <label>EF Style</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Styles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>